# Opencv_Class

class_10/: CMakeLists.txt  DFT.cpp  funtions.cpp  funtions.h
class_11/: CMakeLists.txt  gamma.cpp  histogramEqualization.cpp
class_12/: Background.cpp  CMakeLists.txt  main.cpp
class_13/: CMakeLists.txt  hog.cpp  select_ROI.cpp
class_14/: CMakeLists.txt  parameters.h  test.cpp
class_15/: CMakeLists.txt  main.cpp
class_3/: CMakeLists.txt  exp_1.cpp  threshold.cpp  trackbar.cpp
class_4/: CMakeLists.txt  liantongyu.cpp  qubiezhen.cpp  xianluban.cpp  yingbi.cpp
class_5/: CMakeLists.txt  Gaussia.cpp  Sobel.cpp  blur.cpp  median.cpp  mopi.cpp
class_6/: CMakeLists.txt  affine.cpp  canny.cpp  correct.cpp  projection.cpp  spin.cpp
class_7/: CMakeLists.txt  houghLines.cpp  houghLines_1.cpp  spin.cpp
class_8/: CMakeLists.txt  cap.cpp  chip.cpp  tires.cpp
class_9/: CMakeLists.txt  hog.cpp
prime_number/: CMakeLists.txt  main.cpp
test_1/: CMakeLists.txt  exp_1.cpp  exp_2.cpp  exp_3.cpp  exp_4.cpp
test_2/: CMakeLists.txt  Draw_Circle.cpp  Video_Capture.cpp  exp_1.cpp  histgram.cpp  test.cpp
